force-app/main/default/objects/Form_Interaction__c/Form_Interaction__c.object-meta.xml
<CustomObject>
    <description>A single message in the AI/applicant correspondence history of a form response.</description>
    <label>התכתבות</label>
    <pluralLabel>התכתבויות</pluralLabel>
    <nameField>
        <label>מספר התכתבות</label>
        <type>AutoNumber</type>
        <displayFormat>INT-{00000}</displayFormat>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>