force-app/main/default/objects/Form_Interaction__c/fields/Direction__c.field-meta.xml
<CustomField>
    <fullName>Direction__c</fullName>
    <label>כיוון</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>To_Applicant</fullName><default>false</default><label>לפונה</label></value>
            <value><fullName>From_Applicant</fullName><default>false</default><label>מהפונה</label></value>
            <value><fullName>System</fullName><default>true</default><label>מערכת</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>