force-app/main/default/objects/Form_Interaction__c/fields/Form_Response__c.field-meta.xml
<CustomField>
    <fullName>Form_Response__c</fullName>
    <label>פנייה</label>
    <type>MasterDetail</type>
    <referenceTo>Form_Response__c</referenceTo>
    <relationshipLabel>התכתבויות</relationshipLabel>
    <relationshipName>Interactions</relationshipName>
</CustomField>