force-app/main/default/objects/Form_Interaction__c/fields/Interaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Interaction_Type__c</fullName>
    <label>סוג</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>AI_Review</fullName><default>false</default><label>בדיקת AI</label></value>
            <value><fullName>Info_Request</fullName><default>false</default><label>בקשת השלמה</label></value>
            <value><fullName>Applicant_Reply</fullName><default>false</default><label>תשובת פונה</label></value>
            <value><fullName>Re_Review</fullName><default>false</default><label>בדיקה חוזרת</label></value>
            <value><fullName>Approval</fullName><default>false</default><label>אישור/העברה לעובד</label></value>
            <value><fullName>Note</fullName><default>false</default><label>הערה</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>