force-app/main/default/objects/Form_Interaction__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <label>תוכן</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>