force-app/main/default/objects/Form_Interaction__c/fields/Occurred_At__c.field-meta.xml
<CustomField>
    <fullName>Occurred_At__c</fullName>
    <label>מועד</label>
    <type>DateTime</type>
</CustomField>